Fixed button spacing when they are stacked

--- a/less/nav-link.less
+++ b/less/nav-link.less
@@ -1,10 +1,6 @@
 .extension-nav-link {
 	&.inline {
 		display: inline-block;
-
-		.nav-link-inner {
-			margin-top: @button-margin;
-		}
 	}
 
 	&.fixed {
@@ -30,6 +26,8 @@
 	}
 
 	.nav-link-button {
+		margin-top: @button-margin;
+
 		&.visited {
 			color: @item-text-color-visited;
 			background-color: @item-color-visited;
